[package]
name = "pong_game"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
gl = "0.14.0"
log = "0.4.21"
env_logger = "0.11.3"
sdl2 = "0.37.0"

[build-dependencies]
gl_generator = "0.14.0"